LATTICE-1621 update neighbor searches for new EntityNeighborsFilter format